tests/snapshots/basic__align_items_center_column.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0    ┌───┐           |
1    │Ape│           |
2    └───┘           |
3  ┌───────┐         |
4  │Bat Cat│         |
5  └───────┘         |
6┌───────────┐       |
7│Dog Ewe Fly│       |
8└───────────┘       |
9                    |
x--------------------x

