tests/snapshots/basic__align_items_flexend.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0          ┌────┐    |
1     ┌───┐│Dog │    |
2┌───┐│Bat││Ewe │    |
3│Ape││Cat││Frog│    |
4└───┘└───┘└────┘    |
5                    |
6                    |
7                    |
8                    |
9                    |
x--------------------x

