tests/snapshots/basic__align_items_flexend_column.snap
---
source: tests/basic.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789x
0        Ape         |
1    Bat Cat         |
2Dog Ewe Fly         |
3                    |
4                    |
x--------------------x

